<resources>
    <string name="app_name">My login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text_email">Email</string>
    <string name="login_text_password">Senha</string>
    <string name="button_enter">Entre</string>
    <string name="button_sign_in">Cadastre-se</string>
    <string name="login_text_confirm_password">Confirme sua senha</string>
    <string name="button_create_account">Criar conta</string>
    <string name="text_login_error">"Parece que algo deu errado, tente novamente"</string>
    <string name="text_connect_error">"Erro de conexão"</string>
    <string name="text_password_comparison">"As senha e a confirmação são diferentes"</string>
    <string name="home_test_text">Essa é uma página de teste, sucesso</string>
    <string name="text_exit">Sair</string>
    <string name="content_description_text_exit">Sair</string>
    <string name="notify_validate_form">Existem campos em branco</string>
</resources>